Revision history for {{$dist->name}}

{{$NEXT}}

0.002     2014-01-13 09:34:38+00:00 Europe/London
	No new features.

	Bug fixes:
	* Minimum Future version is 0.21, for ->is_done
	* Don't assume DBD::SQLite is available (was being loaded in DBIx::Async::Worker::SQLite compilation tests)
	* Don't special-case sqlite setup (WAL journal etc.)

0.001     2014-01-12 19:09:03+00:00 Europe/London
	Initial CPAN release