@@ -1,7 +1,6 @@
 requires 'parent', 0;
 requires 'curry', 0;
 requires 'Future', '>= 0.21';
-requires 'Try::Tiny', 0;
 requires 'IO::Async', '>= 0.60';
 requires 'DBI', 0;
 
